# btviz

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/btparse/: Cargo.toml
crates/btparse/src/: layout.rs  lib.rs  parse.rs  types.rs
crates/btparse/tests/: layout_basic.rs  parse_a_xml.rs
crates/groot2_client/: Cargo.toml  README.md
crates/groot2_client/src/: client.rs  lib.rs  protocol.rs
crates/groot2_client/tests/: live_server.rs
docs/: DEPLOYMENT.md
scripts/: install.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: BtEdge.tsx  BtNode.tsx  Canvas.tsx  Sidebar.tsx  TopBar.tsx
src/stores/: tree.ts
src/styles/: globals.css
tools/check-fulltree/: Cargo.toml
tools/check-fulltree/src/: main.rs
