[package]
name = "btviz"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Modern visualizer for BehaviorTree.CPP 4.x trees (Tauri 2 desktop app)"

[lib]
name = "btviz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
